test_regress/t/t_wire_beh_bad.out
%Error-CONTASSREG: t/t_wire_beh_bad.v:11: Continuous assignment to reg, perhaps intended wire (IEEE 2005 6.1; Verilog only, legal in SV): 'r'
   assign r = 1'b1;
          ^
%Error-PROCASSWIRE: t/t_wire_beh_bad.v:12: Procedural assignment to wire, perhaps intended var (IEEE 2017 6.5): 'w'
   always @ (r) w = 1'b0;
                ^
%Error: Exiting due to
